--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: "Press Start 2P", sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
@@ -116,4 +116,26 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+@media (max-width: 40rem) {
+  main {
+    flex-direction: column !important;
+    justify-content: center;
+  }
+  .left {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .right {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1 {
+    margin-top: 2rem;
+    margin-bottom: 2rem !important;
+    padding-bottom: 2rem;
+  }
 }
